// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Snapshots tests should match snapshot 1`] = `
<div>
  <div
    class="component component s"
  >
    <div
      class="inner inner filled"
    >
      <div
        class="inputWrapper"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s filled"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with custom counter 1`] = `
<div>
  <div
    class="component component s"
  >
    <div
      class="inner inner filled"
    >
      <div
        class="inputWrapper"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s filled"
            maxlength="500"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
    <span
      class="sub hint"
    >
      Custom counter
    </span>
  </div>
</div>
`;

exports[`Textarea Snapshots tests should match snapshot with default counter 1`] = `
<div>
  <div
    class="component component s"
  >
    <div
      class="inner inner filled"
    >
      <div
        class="inputWrapper"
      >
        <div
          class="input"
        >
          <textarea
            autocomplete="on"
            class="textarea textarea s filled"
            maxlength="500"
            rows="1"
          >
            value
          </textarea>
        </div>
      </div>
    </div>
    <span
      class="sub hint"
    >
      5/500 символов
    </span>
  </div>
</div>
`;
